--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,34 @@
 
 {% block section_content %}
 <div class="entry-list">
-    <article>
-        <h2><a href="detail.html">The best day I’ve ever had</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-    </article>
-    <article>
-        <h2><a href="detail_2.html">The absolute worst day I’ve ever had</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-    </article>
-    <article>
-        <h2><a href="detail_3.html">That time at the mall</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-    </article>
-    <article>
-        <h2><a href="detail_4.html">Dude, where’s my car?</a></h2>
-        <time datetime="2016-01-31">January 31, 2016</time>
-    </article>
+    {% if current_user.is_authenticated %}
+        {% if entries.count() %}
+            <article>
+                <h2><a href="detail.html">The best day I’ve ever had</a></h2>
+                <time datetime="2016-01-31">January 31, 2016</time>
+            </article>
+            <article>
+                <h2><a href="detail_2.html">The absolute worst day I’ve ever had</a></h2>
+                <time datetime="2016-01-31">January 31, 2016</time>
+            </article>
+            <article>
+                <h2><a href="detail_3.html">That time at the mall</a></h2>
+                <time datetime="2016-01-31">January 31, 2016</time>
+            </article>
+            <article>
+                <h2><a href="detail_4.html">Dude, where’s my car?</a></h2>
+                <time datetime="2016-01-31">January 31, 2016</time>
+            </article>
+        {% else %}
+            <article>
+                <h2>You haven't added any Journal Entries.</h2>
+            </article>
+        {% endif %}
+    {% else %}
+        <article>
+            <h2><button><a href="{{ url_for('login') }}">Login</a></button> to add/view your journal entries.</h2>
+        </article>
+    {% endif %}
+
 </div>
 {% endblock %}
