--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,29 +4,32 @@
 {% block section_content %}
     <div class="entry-list single">
         <article>
-            <h1>The best day I’ve ever had</h1>
-            <time datetime="2016-01-31">January 31, 2016</time>
+            <h1>{{ entry.title }}</h1>
+            <time datetime="{{ entry.date }}">{{ entry.date.strftime('%B %d, %Y') }}</time>
             <div class="entry">
                 <h3>Time Spent: </h3>
-                <p>15 Hours</p>
+                <p>{{ entry.time_spent }} Hours</p>
             </div>
             <div class="entry">
                 <h3>What I Learned:</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut rhoncus felis, vel tincidunt neque.</p>
-                <p>Cras egestas ac ipsum in posuere. Fusce suscipit, libero id malesuada placerat, orci velit semper metus, quis pulvinar sem nunc vel augue. In ornare tempor metus, sit amet congue justo porta et. Etiam pretium, sapien non fermentum consequat, <a href="">dolor augue</a> gravida lacus, non accumsan. Vestibulum ut metus eleifend, malesuada nisl at, scelerisque sapien.</p>
+                <p>{{ entry.learned|safe }}</p>
             </div>
             <div class="entry">
                 <h3>Resources to Remember:</h3>
                 <ul>
-                    <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                    <li><a href="">Cras accumsan cursus ante, non dapibus tempor</a></li>
-                    <li>Nunc ut rhoncus felis, vel tincidunt neque</li>
-                    <li><a href="">Ipsum dolor sit amet</a></li>
+                    <li>{{ entry.resources|safe }}</li>
                 </ul>
+            </div>
+            <div class="entry">
+                <h3>Tags:</h3>
+                <p>{{ entry.tags|safe }}</p>
             </div>
         </article>
     </div>
-    <div class="edit">
-        <p><a href="edit.html">Edit Entry</a></p>
-    </div>
+    {% if entry.user == current_user %}
+        <div class="edit">
+            <p><a href="{{ url_for('entry_edit', entry_id=entry.id)}}">Edit Entry</a></p>
+        </div>
+    {% endif %}
+
 {% endblock %}
