--- a/templates/detail.html
+++ b/templates/detail.html
@@ -28,7 +28,8 @@
     </div>
     {% if entry.user == current_user %}
         <div class="edit">
-            <p><a href="{{ url_for('entry_edit', entry_id=entry.id)}}">Edit Entry</a></p>
+            <p><a class="button" href="{{ url_for('entry_edit', entry_id=entry.id)}}">Edit Entry</a></p>
+            <p><a class="button button-secondary" href="{{ url_for('entry_delete', entry_id=entry.id)}}">Delete Entry</a></p>
         </div>
     {% endif %}
 
